kubernetes/apps/wireguard-easy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-02
      containers:
      - image: ghcr.io/wg-easy/wg-easy:latest
        name: wg-easy
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - SYS_MODULE
          privileged: true
        ports:
        - containerPort: 51820
          name: wg-vpn
          protocol: UDP
        - containerPort: 51821
          name: wg-easy-ui
          protocol: TCP
        volumeMounts:
        - name: wg-easy-pv
          mountPath: /etc/wireguard
      volumes:
      - name: wg-easy-pv
        persistentVolumeClaim:
          claimName: wg-easy-pvc
      restartPolicy: Always
