kubernetes/apps/wireguard-easy/base/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-vpn
  namespace: wg-easy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vpn.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.120

  selector:
    app: wg-easy

  ports:
    - name: vpn
      port: 51820
      targetPort: wg-vpn
      protocol: UDP
